uptime-kuma/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  selector:
    app: uptime-kuma
  type: ClusterIP
