uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.cngei.it`)
      services:
        - kind: Service
          name: uptime-kuma
          port: 3001
  tls:
    secretName: uptime-kuma-tls
